<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/q1" />

        <EditText
            android:id="@+id/q1_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/q1_hint"
            android:inputType="text" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/q2" />

        <CheckBox
            android:id="@+id/q2_a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2_option1" />

        <CheckBox
            android:id="@+id/q2_a2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2_option2" />

        <CheckBox
            android:id="@+id/q2_a3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2_option3" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/q3" />

        <RadioGroup
            android:id="@+id/q3_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q3_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:tag="1"
                android:text="@string/q3_option1" />

            <RadioButton
                android:id="@+id/q3_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="2"
                android:text="@string/q3_option2" />

            <RadioButton
                android:id="@+id/q3_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="3"
                android:text="@string/q3_option3" />
        </RadioGroup>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/q4" />

        <CheckBox
            android:id="@+id/q4_a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4_option1" />

        <CheckBox
            android:id="@+id/q4_a2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4_option2" />

        <CheckBox
            android:id="@+id/q4_a3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4_option3" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/q5" />

        <RadioGroup
            android:id="@+id/q5_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q5_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:tag="1"
                android:text="@string/q5_option1" />

            <RadioButton
                android:id="@+id/q5_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="2"
                android:text="@string/q5_option2" />

            <RadioButton
                android:id="@+id/q5_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="3"
                android:text="@string/q5_option3" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="checkAnswers"
            android:text="@string/submit" />
    </LinearLayout>


</ScrollView>